# PyDevelopment

./: .gitignore  README.md  development_env-requirements.md  pydevelopment-requirements.md  pytorch_env-requirements.md
fastapi_frame_note/: HTML_form标签.py  a.py  basic.py  ff.py  jinja2_a_variables.py  jinja2_b_if_for.py  jinja2_if_for.py  jinja2_variables.py  main.py  request.py  test.http  test_main.http  xx.ipynb  变量_查询参数.py  变量_路径参数.py  生命周期_lifespan.py  请求体JSON数据.py  请求体JSON数据0.py  请求体JSON数据1.py  请求体JSON数据2.py  请求体JSON数据3_List.py  请求体JSON数据3_list_dict.py  请求体files文件数据.py  请求体form表单数据.py  路径参数.py  部署_Uvicorn.py
flask_frame_note/: HTML_form标签.py  JSON数据返回.py  basic.py  basic0.py  basic1.py  flask_restful_0.py  flask_restful_1.py  flask_restful_2.py  flask_restful_3.py  form表单.py  jinja2_base.py  request.py  request_args_json_form.py  request_file_test.ipynb  request_files.py  request_form表单数据.py  request_head.py  request_head_url.py  变量规则.py  部署_flask.py
pyinstaller打包/: help.md
python并发编程/: 全局线程池示例.py  多线程ThreadPoolExecutor.py  多进程ProcessPoolExecutor.py  异步执行线程池+进程池.py  异步执行线程池ThreadPoolExecutor.py  异步执行进程池ProcessPoolExecutor.py  异步进程池ProcessPoolExecutor.py  (+1 more)
setuptools_note/setuptools_base/: README.md  find_packages_test.ipynb  pyproject.toml  setup.py
setuptools_note/setuptools_base/atest/: t0.ipynb  t0.py
setuptools_note/setuptools_base/mypackage/: fish.py
setuptools_note/setuptools_base/mypackage.egg-info/: PKG-INFO  SOURCES.txt
setuptools_note/setuptools_base/mypackage/mp0/: custom_ao.py
setuptools_note/setuptools_base/mypackage/mp0/data/: mypackage_my1_0.sql  t.txt
setuptools_note/setuptools_base/mypackage/my1/: custom_ao.py
setuptools_note/setuptools_base/mypackage1/: hello.py
setuptools_note/setuptools_base/mypackage1/data/: c.csv  mypackage1_0.sql  t.txt
setuptools_note/setuptools_base/xyzqwer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
setuptools_note/so_packaging/: custom_search.cpp  pyproject.toml  setup.py  test.py
setuptools_note/so_packaging/custom_search/: __init__.py
setuptools_note/so_packaging/xyzasdf.egg-info/: PKG-INFO  SOURCES.txt
(+384 files in other folders)
