# Declaring the build backend
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xyzqwer"  # 项目名称
version = "0.0.1"  # 项目版本号
description = "pyproject.toml打包基础"  # The summary description of the project.
readme = "README.md"  # The full description of the project (i.e. the README).
requires-python = ">=3.10,<3.14"  # The Python version requirements of the project.
license = "Apache-2.0"  # 项目许可证
keywords = ["python", "setuptools"]  # 项目关键字
authors = [
    {name = "dcdmm", email = "dcdmm@gmail.com"}
]  # 作者信息(name and/or email)
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]  # Trove classifiers which apply to the project. 
dependencies = [
    "tqdm",
    "numpy >= 1.9.0",
    "scipy >= 1.0.0",
    "scikit-learn >= 0.18.0",
    "colorama >= 0.4.6"
]

# A list of URLs associated with your project
[project.urls]
homepage = "https://github.com/dcdmm/PyDevelopment"  # 项目主页
source = "https://github.com/dcdmm/PyDevelopment"  # The project’s hosted source code or repository

# [tool.setuptools]
# 安装的包有mypackage、mypackage1、mypackage.mp0(子包)
# packages = ["mypackage", "mypackage1", "mypackage.mp0"]  # 不会自动递归包含子包(需手动指定)

# 与上等价
[tool.setuptools.packages.find]
where = ["."]  # 当前目录自动查找所有包(递归包含所有子包)
include = ["mypackage*"]
exclude = ["mypackage.my1*"]

[tool.setuptools.package-data]
"*" = ["*.sql"]  # 打包所有包的.sql文件
mypackage1 = ["data/*.csv", "data/*.txt"]  # 打包mypackage1包data目录下所有.csv和.txt 文件
"mypackage.mp0" = ["docs/*"]  # 打包mypackage.mp0(子包)包docs目录下所有文件